deployment/helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: helloworld
