deployment/helloworld-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld
  namespace: istio-system
spec:
  hosts:
    - cloud.ouludatalab.fi
  gateways:
    - istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /helloworld
      rewrite:
        uri: /hello  # optional: if your app expects `/hello`
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 80
